--- a/output.html
+++ b/output.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dein Zine ist fertig! 🎉</title>
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
->    <script>
+<link rel="stylesheet" href="https://cdn.simplecss.org/simple.css"> 
+    <script>
       document.addEventListener("DOMContentLoaded", () => {
         const printLink = document.getElementById("printPdfLink");
         const viewLink = document.getElementById("viewPdfLink");
