--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zinebot 🤖</title>
 <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css"> 
+    <!-- pdf-lib laden (global verfügbar als window.pdfLib) -->
+<script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
+
     <script src="zinebot.js" defer></script>
   </head>
   <body>
